--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,15 @@
 
     "name": "Unizar Moodle2 Orange Fix",
     "description": "Kill that orange thing!!",
-    "version": "1.0",
+    "version": "1.1",
 
     "browser_action": {
-        "default_icon": "icon.png"
+        "default_icon": "icon.png",
+        "default_title": "Fix that orange thing!",
+        "default_popup": "popup.html"
     },
     "content_scripts": [{
-        "css": ["styles.css"],
+        "css": [],
         "js": ["fixOrange.js"],
         "matches": ["https://moodle2.unizar.es/add/*"]
     }],
